exports[`pages > list_pages > list pages for extension pages with --category-extensions 1`] = `
# list_pages response
## Pages
1: about:blank [selected]
## Extension Pages
2: chrome-extension://<extension-id>/popup.html
`;

exports[`pages > list_pages > list pages for extension service workers with --category-extensions 1`] = `
# list_pages response
## Pages
1: about:blank [selected]
## Extension Service Workers
sw-1: chrome-extension://<extension-id>/sw.js
`;

exports[`pages > list_pages > list pages for extension service workers without --category-extensions 1`] = `
# list_pages response
## Pages
1: about:blank [selected]
`;
